--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -10,6 +10,14 @@
         overflow-x: hidden;
         margin-top: 50px;
 
+        @media (max-width:768px) {
+            display: block;
+        }
+
+        .buton{
+            margin-top: 24px;
+        }
+
         &__item{
             text-align: center;
             padding: 60px 44px 44px;
