--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -10,6 +10,10 @@
         gap: 24px;
         margin-top: 44px;
 
+        @media (max-width:768px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
         &--is-active{
             display: grid;
         }
@@ -25,6 +29,11 @@
     &__tabs{
         display: flex;
         justify-content: center;
+
+        @media (max-width:768px) {
+            white-space: nowrap;
+            padding-left: 20px;
+        }
         &__button{
             color: variaveis.$corTextoSecundaria;
             font-size: 20px;
@@ -36,6 +45,10 @@
             cursor: pointer;
             border-bottom: 5px solid transparent;
             
+            @media (max-width:768px) {
+                font-size: 16px;
+            }
+
             &--is-active{
                 border-color: variaveis.$corTextoSecundaria;
             }
