--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $corDeFundo: #040714;
 $corTextoPrincipal: silver;
 $corTextoSecundaria:#f9f9f9;
+$corDeFundoBotaoPrimario:#6421ff;
+$corDeFundoBotaoSecundario:#016CF9;
+$corDeFundoBotaoDark:#000c;
