--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -19,6 +19,9 @@
         }
 
         &__item{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             text-align: center;
             padding: 60px 44px 44px;
             max-width: 380px;
